--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,111 @@
-.App {
+@import 
+url(https://fonts.googleapis.com/css?family=Open+Sans);
+.App{
   text-align: center;
+  display: grid;
+  grid-template-rows: 70px auto;
+  grid-template-columns: minmax(50px,1fr) 1fr minmax(50px,1fr);
+  grid-row-gap: 2em;
+}
+#header{
+  grid-column: 1/5;
+  grid-row: 1/2;
+  background-color: #000;
+}
+#header h1{
+  text-align: center;
+  margin-top: 20px;
+  font-size: 50px;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  margin-left: 10px;
+  color: #FFF;
+}
+#header h1:hover{
+  color:#DDD;
+  transition: all .3s ease-out;
+  cursor: pointer;
+}
+div.wrapper{
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+#search-bar{
+  width: 100%;
+  position: relative;
+}
+#search-bar input{
+  margin-top: 20px;
+  width: 200px;
+  border: 1px solid #000;
+  padding: 5px;
+  height: 20px;
+  border-radius: 1px;
+  outline: none;
+  color: black;
+}
+#search-bar input:focus{
+  color: #444;
+}
+.searchButton{
+  margin-left: -9px;
+  margin-top: 20px;
+  position: absolute;  
+  /* right: -50px; */
+  width: 60px;
+  height: 32px;
+  border: none;
+  background: #000;
+  text-align: center;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+}
+.searchButton i{
+  font-size: 20px;
+}
+.searchButton:hover{
+  background-color: #444;
+  transition: all .3s ease-out;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@media only screen and (max-width: 650px) {
+  .App {
+    overflow: hidden;
+    text-align: center;
+    display: grid;
+    grid-template-rows: 70px auto;
+    grid-template-columns: 2px 1fr 2px;
+    grid-row-gap: 2em;
+  }
+  div.wrapper {
+    margin-right: 10%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  #header h1{
+    width: auto;
+    grid-column: 1/4;
+  }
+  #footer h1{
+    font-size:30px !important;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#footer{
+  position: fixed;
+  padding: 10px 10px 0px 10px;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  background: #000;
 }
 
-.App-link {
-  color: #61dafb;
+#footer h1{
+  text-align: center;
+  font-size: 40px;
+  text-transform: uppercase;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color: #FFF;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#footer h1:hover{
+  color:#DDD;
+  transition: all .3s ease-out;
+  cursor: pointer;
 }
